fix(fantasy-loader): adjust loading text position for improved alignment

--- a/src/app/shared/ui/fantasy-loader/fantasy-loader.component.scss
+++ b/src/app/shared/ui/fantasy-loader/fantasy-loader.component.scss
@@ -795,7 +795,7 @@
   letter-spacing: 1px;
   text-align: center;
   position: relative;
-  top: 26px;
+  top: 38px;
 
   .text-container {
     display: flex;
